crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_bare_pattern_predicate_single_var_ambiguous.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 573
expression: "format_with_errors(\"MATCH (n) WHERE (n) RETURN n\")"
---
SOURCE_FILE@0..28
  STATEMENT@0..28
    MATCH_CLAUSE@0..19
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
      WHERE_CLAUSE@9..19
        WHITESPACE@9..10 " "
        WHERE_KW@10..15 "WHERE"
        PATTERN_PREDICATE@15..19
          PATTERN@15..19
            PATTERN_PART@15..19
              NODE_PATTERN@15..19
                WHITESPACE@15..16 " "
                L_PAREN@16..17 "("
                NAME@17..18
                  IDENT@17..18 "n"
                R_PAREN@18..19 ")"
    RETURN_CLAUSE@19..28
      WHITESPACE@19..20 " "
      RETURN_KW@20..26 "RETURN"
      RETURN_BODY@26..28
        RETURN_ITEMS@26..28
          RETURN_ITEM@26..28
            VAR_EXPR@26..28
              WHITESPACE@26..27 " "
              IDENT@27..28 "n"
