crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_binary_boolean.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 309
expression: "format_with_errors(\"RETURN NOT a OR b AND c\")"
---
SOURCE_FILE@0..23
  STATEMENT@0..23
    RETURN_CLAUSE@0..23
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..23
        RETURN_ITEMS@6..23
          RETURN_ITEM@6..23
            BINARY_EXPR@6..23
              UNARY_EXPR@6..12
                WHITESPACE@6..7 " "
                NOT_KW@7..10 "NOT"
                VAR_EXPR@10..12
                  WHITESPACE@10..11 " "
                  IDENT@11..12 "a"
              WHITESPACE@12..13 " "
              OR_KW@13..15 "OR"
              BINARY_EXPR@15..23
                VAR_EXPR@15..17
                  WHITESPACE@15..16 " "
                  IDENT@16..17 "b"
                WHITESPACE@17..18 " "
                AND_KW@18..21 "AND"
                VAR_EXPR@21..23
                  WHITESPACE@21..22 " "
                  IDENT@22..23 "c"
