crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_binary_power_right_assoc.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 299
expression: "format_with_errors(\"RETURN 2 ^ 3 ^ 2\")"
---
SOURCE_FILE@0..16
  STATEMENT@0..16
    RETURN_CLAUSE@0..16
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..16
        RETURN_ITEMS@6..16
          RETURN_ITEM@6..16
            BINARY_EXPR@6..16
              LITERAL_EXPR@6..8
                WHITESPACE@6..7 " "
                INT_LITERAL@7..8 "2"
              WHITESPACE@8..9 " "
              CARET@9..10 "^"
              BINARY_EXPR@10..16
                LITERAL_EXPR@10..12
                  WHITESPACE@10..11 " "
                  INT_LITERAL@11..12 "3"
                WHITESPACE@12..13 " "
                CARET@13..14 "^"
                LITERAL_EXPR@14..16
                  WHITESPACE@14..15 " "
                  INT_LITERAL@15..16 "2"
