crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_ends_with.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 319
expression: "format_with_errors(\"RETURN a ENDS WITH 'foo'\")"
---
SOURCE_FILE@0..24
  STATEMENT@0..24
    RETURN_CLAUSE@0..24
      RETURN_KW@0..6 "RETURN"
      RETURN_BODY@6..24
        RETURN_ITEMS@6..24
          RETURN_ITEM@6..24
            STRING_OP_EXPR@6..24
              VAR_EXPR@6..8
                WHITESPACE@6..7 " "
                IDENT@7..8 "a"
              WHITESPACE@8..9 " "
              ENDS_KW@9..13 "ENDS"
              WHITESPACE@13..14 " "
              WITH_KW@14..18 "WITH"
              LITERAL_EXPR@18..24
                WHITESPACE@18..19 " "
                STRING_LITERAL@19..24 "'foo'"
